--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*",
+		"laravel/framework": "5.1.*",
 		"laravelcollective/html": "~5.0",
 		"patricktalmadge/bootstrapper": "dev-laravel-5",
 		"illuminate/html": "~5.0",
@@ -15,7 +15,10 @@
 		"imagine/imagine": "0.6.*",
 		"laracasts/flash": "~1.3",
 		"laravel/socialite": "~2.0",
-		"guzzlehttp/guzzle": "~5.0"
+		"guzzlehttp/guzzle": "~5.0",
+		"league/flysystem-aws-s3-v3": "~1.0",
+		"graham-campbell/flysystem": "~3.1"
+		
 		
 		
 	},
