--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
 		"laravel/socialite": "~2.0",
 		"guzzlehttp/guzzle": "~5.0",
 		"league/flysystem-aws-s3-v3": "~1.0",
-		"graham-campbell/flysystem": "~3.1"
+		"graham-campbell/flysystem": "~3.1",	
+    	"busayo/laravel-mentions": "1.0.*"
+
 		
 		
 		
